samples/_failures_safe/1761300902_d2b2f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a9fb8e0.c: In function ‘main’:
./samples/SAFE/__tmp_8a9fb8e0.c:154:13: error: expected declaration or statement at end of input
  154 |             case 4:
      |             ^~~~
./samples/SAFE/__tmp_8a9fb8e0.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a9fb8e0.c:154:13: error: expected declaration or statement at end of input
